syntax = "proto3";

package rpc;

message MachineInfo {
    int32 cpu = 1;
    float cpu_usage = 2;
    int32 memory = 3;
    float memory_usage = 4;
}

message Reply{
    bool recv = 1; 
}

service Greeter{
    rpc HeartBeat(MachineInfo) returns(Reply){}
}